--- a/emr/app/views/patients/new.html.erb
+++ b/emr/app/views/patients/new.html.erb
@@ -1,1 +1,17 @@
 <h1>New Patient</h1>
+
+<%= form_with scope: :article, url: patients_path, local: true do |form| %>
+  <p>
+    <%= form.label :Name %><br>
+    <%= form.text_field :Name %>
+  </p>
+ 
+  <p>
+    <%= form.label :"Plain text note" %><br>
+    <%= form.text_area :"Plain text note" %>
+  </p>
+ 
+  <p>
+    <%= form.submit %>
+  </p>
+<% end %>
