--- a/emr/app/views/patients/new.html.erb
+++ b/emr/app/views/patients/new.html.erb
@@ -1,17 +1,31 @@
 <h1>New Patient</h1>
 
-<%= form_with scope: :article, url: patients_path, local: true do |form| %>
+<%= form_with scope: :patient, url: patients_path, local: true do |form| %>
+
+  <%= @patient.name %>
+
+  <% if @patient.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@patient.errors.count, "error") %> prohibited
+        this patient from being saved:
+      </h2>
+      <ul>
+        <% @patient.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <p>
-    <%= form.label :Name %><br>
-    <%= form.text_field :Name %>
-  </p>
- 
-  <p>
-    <%= form.label :"Plain text note" %><br>
-    <%= form.text_area :"Plain text note" %>
+    <%= form.label :name %><br>
+    <%= form.text_field :name %>
   </p>
  
   <p>
     <%= form.submit %>
   </p>
 <% end %>
+
+<%= link_to 'Back', patients_path %>
