--- a/emr/app/views/patients/show.html.erb
+++ b/emr/app/views/patients/show.html.erb
@@ -3,4 +3,34 @@
   <%= @patient.name %>
 </p>
 
+
+<h2>Notes</h2>
+  <table>
+	<tr>
+	  <th></th>
+	  <th></th>
+	  <th colspan="3"></th>
+	</tr>
+   
+	<% @patient.patient_notes.each do |patient_note| %>
+    <tr>
+      <td><%= patient_note.note %></td>
+      <td><%= link_to 'Edit', edit_patient_patient_note_path(@patient, patient_note) %></td>
+      <td><%= link_to 'Delete', patient_patient_note_path(@patient, patient_note), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	</tr>
+	<% end %>
+  </table>
+
+<h2>Add a patient note:</h2>
+<%= form_with(model: [ @patient, @patient.patient_notes.build ], local: true) do |form| %>
+  <p>
+    <%= form.label :note %><br>
+    <%= form.text_area :note %>
+  </p>
+  <p>
+    <%= form.submit %>
+  </p>
+<% end %>
+
+
 <%= link_to 'Back', patients_path %>
