--- a/emr/app/views/patients/index.html.erb
+++ b/emr/app/views/patients/index.html.erb
@@ -4,6 +4,6 @@
 
 <ul>
   <% @patients.each do |patient| %>
-  <li><%= patient.name %></li>
+  <li><%= link_to patient.name, patient_path(patient) %></li>
   <% end %>
 </ul>
